chore: agregar plantilla pedido-detalle y ajustes de vistas