@@ -37,9 +37,34 @@ public class HomeController {
     }
 
     @GetMapping("/productos")
-    public String productos(@RequestParam(name = "q", required = false) String q, Model model) {
-        // Listar todos los productos o filtrar por búsqueda
-        List<Producto> productos = (q != null && !q.trim().isEmpty()) ? productoService.buscarPorNombre(q) : productoService.listarTodos();
+    public String productos(
+            @RequestParam(name = "q", required = false) String q,
+            @RequestParam(name = "categoria", required = false) String categoria,
+            @RequestParam(name = "precioMin", required = false) String precioMinStr,
+            @RequestParam(name = "precioMax", required = false) String precioMaxStr,
+            Model model) {
+
+        java.math.BigDecimal precioMin = null;
+        java.math.BigDecimal precioMax = null;
+        try {
+            if (precioMinStr != null && !precioMinStr.isBlank()) {
+                precioMin = new java.math.BigDecimal(precioMinStr.trim());
+            }
+            if (precioMaxStr != null && !precioMaxStr.isBlank()) {
+                precioMax = new java.math.BigDecimal(precioMaxStr.trim());
+            }
+        } catch (NumberFormatException e) {
+            // Ignorar formato inválido y dejar nulls
+        }
+
+        List<Producto> productos;
+        // Si hay algún filtro (categoria o precio) o búsqueda q, usar la consulta con filtros
+        if ((q != null && !q.trim().isEmpty()) || (categoria != null && !categoria.isBlank()) || precioMin != null || precioMax != null) {
+            productos = productoService.buscarConFiltros(categoria, precioMin, precioMax, q, 1000);
+        } else {
+            productos = productoService.listarTodos();
+        }
+
         model.addAttribute("productos", productos);
 
         // Productos para carrusel de la página productos
@@ -48,6 +73,21 @@ public class HomeController {
 
         // Información del carrito
         model.addAttribute("cantidadCarrito", carritoService.obtenerCantidadTotal());
+
+        // Categorías disponibles
+    model.addAttribute("categorias", productoService.listarCategorias());
+
+        // Precios globales (min/max) para el slider
+        java.math.BigDecimal precioGlobalMin = productoService.obtenerPrecioMinimo();
+        java.math.BigDecimal precioGlobalMax = productoService.obtenerPrecioMaximo();
+        model.addAttribute("precioMinGlobal", precioGlobalMin != null ? precioGlobalMin.toPlainString() : "0");
+        model.addAttribute("precioMaxGlobal", precioGlobalMax != null ? precioGlobalMax.toPlainString() : "0");
+
+        // Pasar valores seleccionados para mantener el estado del formulario
+        model.addAttribute("selectedCategoria", categoria);
+        model.addAttribute("precioMin", precioMin != null ? precioMin.toPlainString() : "");
+        model.addAttribute("precioMax", precioMax != null ? precioMax.toPlainString() : "");
+        model.addAttribute("q", q);
 
         return "productos"; // templates/productos.html
     }
